[package]
name = "imt2"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "imt"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
toml = "0.5"
