[package]
name = "imt2"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "imtlib"

[dependencies]
anyhow = "1.0"
hex = "0.4"
log = "0.4"
parking_lot = "0.10"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.8"
simplelog = "0.7"
structopt = "0.3"
test-case = "1.0"
toml = "0.5"
walkdir = "2"
